crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_file_compound_words.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(file, errors.to_vec())"
---
(
    Some(
        ChatFile {
            lines: ChatFileLines(
                [
                    Header {
                        header: Utf8,
                        span: Span {
                            start: 0,
                            end: 5,
                        },
                    },
                    Header {
                        header: Begin,
                        span: Span {
                            start: 6,
                            end: 12,
                        },
                    },
                    Header {
                        header: Languages {
                            codes: LanguageCodes(
                                [
                                    LanguageCode(
                                        "eng",
                                    ),
                                ],
                            ),
                        },
                        span: Span {
                            start: 13,
                            end: 28,
                        },
                    },
                    Utterance(
                        Utterance {
                            preceding_headers: [],
                            main: MainTier {
                                speaker: SpeakerCode(
                                    "CHI",
                                ),
                                content: TierContent {
                                    linkers: TierLinkers(
                                        [],
                                    ),
                                    language_code: None,
                                    content: TierContentItems(
                                        [
                                            Word(
                                                Word {
                                                    span: Span {
                                                        start: 35,
                                                        end: 43,
                                                    },
                                                    word_id: None,
                                                    raw_text: "wai4+yu3",
                                                    content: WordContents(
                                                        [
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "wai4",
                                                                    ),
                                                                ),
                                                            ),
                                                            CompoundMarker(
                                                                WordCompoundMarker {
                                                                    span: Some(
                                                                        Span {
                                                                            start: 39,
                                                                            end: 40,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "yu3",
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    category: None,
                                                    form_type: None,
                                                    lang: None,
                                                    part_of_speech: None,
                                                    inline_bullet: None,
                                                    cached_cleaned_text: CachedStr(
                                                        OnceLock(
                                                            <uninit>,
                                                        ),
                                                    ),
                                                },
                                            ),
                                            Word(
                                                Word {
                                                    span: Span {
                                                        start: 44,
                                                        end: 55,
                                                    },
                                                    word_id: None,
                                                    raw_text: "hello+world",
                                                    content: WordContents(
                                                        [
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "hello",
                                                                    ),
                                                                ),
                                                            ),
                                                            CompoundMarker(
                                                                WordCompoundMarker {
                                                                    span: Some(
                                                                        Span {
                                                                            start: 49,
                                                                            end: 50,
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            Text(
                                                                WordText(
                                                                    NonEmptyString(
                                                                        "world",
                                                                    ),
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                    category: None,
                                                    form_type: None,
                                                    lang: None,
                                                    part_of_speech: None,
                                                    inline_bullet: None,
                                                    cached_cleaned_text: CachedStr(
                                                        OnceLock(
                                                            <uninit>,
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                    ),
                                    terminator: Some(
                                        Period {
                                            span: Span {
                                                start: 0,
                                                end: 0,
                                            },
                                        },
                                    ),
                                    postcodes: TierPostcodes(
                                        [],
                                    ),
                                    bullet: None,
                                    content_span: None,
                                },
                                span: Span {
                                    start: 29,
                                    end: 57,
                                },
                                speaker_span: Span {
                                    start: 30,
                                    end: 33,
                                },
                            },
                            dependent_tiers: [],
                            alignments: None,
                            alignment_diagnostics: [],
                            parse_health: None,
                            utterance_language: Uncomputed,
                            language_metadata: Uncomputed,
                        },
                    ),
                    Header {
                        header: End,
                        span: Span {
                            start: 58,
                            end: 63,
                        },
                    },
                ],
            ),
            participants: {},
            languages: LanguageCodes(
                [
                    LanguageCode(
                        "eng",
                    ),
                ],
            ),
            options: ChatOptionFlags(
                [],
            ),
            media: None,
            line_map: Some(
                LineMap {
                    line_starts: [
                        0,
                        6,
                        13,
                        29,
                        58,
                        63,
                    ],
                },
            ),
            _state: PhantomData<talkbank_model::validation::state::NotValidated>,
        },
    ),
    [],
)
